# Algorithms-Tasks-Cpp

./: CMakeLists.txt  README.md  main.cpp
Coders-tasks/: coders_algorithms_10.h  coders_algorithms_foreach_9.h  coders_array_3.h  coders_classes_11.h  coders_deque_5.h  coders_funktor_6.h  coders_iterator_8.h  coders_lambda_7.h  coders_list_4.h  coders_map_1.h  coders_vector_2.h
Easy/: NWD_String.h  add_binary.h  bin_tree_inorder_traversal.h  climbing_stairs.h  compare_binary_tree.h  excel_column.h  find_single_num.h  find_str_in_str.h  length_last_word.h  lngst_comm_pfx.h  majority_element.h  merge_linked_lists.h  merge_sorted_vector.h  merge_strings.h  palindrome_number.h  parenteses.h  pascal_triangle.h  pascal_triangle_2.h  plus_one.h  recursion.h  rem_dup_linked_list.h  remove_duplicates.h  remove_vec_element.h  roman_to_int.h  search_or_insert.h  sqrtx.h  symmetric_binary_try.h  two_sum_target.h  valid_palindrome.h
Medium/: add_reverse_link_lists_val.h  longest_palindromic_substr.h  longest_substr_wo_repeat.h
other-tasks/: device-message.h  message_queue.h  motor-controller.h  rtos-simulation.h  sensor_factory.h  sensors.h
