cmake_minimum_required(VERSION 3.30)
project(Leetcode1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Leetcode1 main.cpp
        Easy/recursion.h
        Easy/merge_strings.h
        Easy/NWD_String.h
        Easy/lngst_comm_pfx.h
        Easy/parenteses.h
        Easy/palindrome_number.h
        Easy/roman_to_int.h
        Easy/two_sum_target.h
        Easy/search_or_insert.h
        Easy/length_last_word.h
        Easy/add_binary.h
        Easy/merge_linked_lists.h
        Easy/remove_duplicates.h
        Easy/plus_one.h
        Easy/bin_tree_inorder_traversal.h
        Easy/compare_binary_tree.h
        Easy/sqrtx.h
        Easy/climbing_stairs.h
        Easy/rem_dup_linked_list.h
        Coders-tasks/coders_map_1.h
        Easy/valid_palindrome.h
        Easy/find_single_num.h
        Easy/pascal_triangle.h
        Easy/pascal_triangle_2.h
        Coders-tasks/coders_vector_2.h
        Coders-tasks/coders_array_3.h
        Easy/remove_vec_element.h
        Easy/find_str_in_str.h
        Coders-tasks/coders_list_4.h
        Easy/merge_sorted_vector.h
        Easy/symmetric_binary_try.h
        Medium/add_reverse_link_lists_val.h
        Easy/excel_column.h
        Coders-tasks/coders_deque_5.h
        Coders-tasks/coders_funktor_6.h
        Coders-tasks/coders_lambda_7.h
        Coders-tasks/coders_iterator_8.h
        Coders-tasks/coders_algorithms_foreach_9.h
        Coders-tasks/coders_algorithms_10.h
        Easy/majority_element.h
        Medium/longest_substr_wo_repeat.h
        Medium/longest_palindromic_substr.h
        Coders-tasks/coders_classes_11.h)
